logs/Slang/generated/hdlconv/hdlconvertor_p477.sv.log
name: hdlconvertor_p477
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:2:1: error: language feature not yet supported
property q1;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:5:1: error: language feature not yet supported
property q2;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:8:1: error: language feature not yet supported
default clocking posedge_clk @(posedge clk);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:19:18: error: expected expression
@(posedge clk) b[*3];
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:23:1: error: language feature not yet supported
property q5;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:24:18: error: expected expression
@(negedge clk) b[*3] |=> !b;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:28:1: error: language feature not yet supported
a1: assert property ($fell(c) |=> q1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:31:1: error: language feature not yet supported
a2: assert property (posedge_clk.q4);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:34:1: error: language feature not yet supported
a4: assert property (q5);
^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:38:1: error: language feature not yet supported
property q6;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:42:1: error: language feature not yet supported
a6: assert property ($fell(c) |=> q6);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:45:1: error: language feature not yet supported
sequence s2;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:48:1: error: language feature not yet supported
c1: cover property (s2);
^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p477.sv:50:1: error: language feature not yet supported
c2: cover property (@(negedge clk) s2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
